--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "axios": "^0.24.0",
@@ -20,6 +21,7 @@
     "vue-router": "^3.5.3",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-toastify": "^1.8.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
